renamed treemap.html to index.html and changed to minified version of D3

--- a/ToxicityReport-web/index.html
+++ b/ToxicityReport-web/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	<title>Treemap</title>
-	<script type="text/javascript" src="lib/d3/d3.v2.js"></script>
+	<title>ToxicityReport</title>
+	<script type="text/javascript" src="lib/d3/d3.v2.min.js"></script>
 	<script type="text/javascript" src="treemap.js"></script>
 	<link type="text/css" rel="stylesheet" href="treemap.css" />
 	<link type="text/css" rel="stylesheet" href="button.css" />
