show namespace on the treemap
removed namespace button

--- a/ToxicityReport-web/index.html
+++ b/ToxicityReport-web/index.html
@@ -19,11 +19,8 @@
 		<button id="complexity">
 			Complexity
 		</button>
-		<button id="coupling">
+		<button id="coupling" class="last">
 			Coupling
-		</button>
-		<button id="namespace" class="last">
-			Namespace
 		</button>
 		<input type="file" id="metricFile" />
 	</div>
