--- a/ToxicityReport-web/index.html
+++ b/ToxicityReport-web/index.html
@@ -7,14 +7,14 @@
 	<script type="text/javascript" src="lib/jquery/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="stringExtensions.js"></script>
 	<script type="text/javascript" src="arrayExtensions.js"></script>
-	<script type="text/javascript" src="treemapJsonBuilder.js"></script>
+	<script type="text/javascript" src="treemapDataBuilder.js"></script>
 	<script type="text/javascript" src="fxcopParser.js"></script>
-	<script type="text/javascript" src="treemap.js"></script>
+	<script type="text/javascript" src="treemapChart.js"></script>
 	<link type="text/css" rel="stylesheet" href="treemap.css" />
 	<link type="text/css" rel="stylesheet" href="button.css" />
 </head>
 <body>
-	<div class="navigation">
+	<div class="nav">
 		<button id="lines" class="first active">
 			Lines
 		</button>
@@ -32,17 +32,46 @@
 	<div id="chart">
 	</div>
 	<script type="text/javascript">
-		function loadMetricFile(evt) {
-			var file = d3.event.target.files[0];
-			var reader = new FileReader();
-			reader.onload = function (e) {
-			    var json = fxcopParser.parse(e.target.result);
-				treemap.update(json);
-				document.getElementById("lines").click();
-			};
-			reader.readAsText(file);
+var builder = treemapDataBuilder();
+var fxcopParser = fxcopParser(builder);
+var treemap = treemapChart().metric('lines').width(window.innerWidth - 20).height(window.innerHeight - 60);
+var treemapData;
+var selection;
+
+function loadMetricFile(evt) {
+	var file = d3.event.target.files[0];
+	var reader = new FileReader();
+	reader.onload = function (e) {
+		$('#chart').html('');
+		selection = null;
+		treemapData = fxcopParser.parse(e.target.result);
+		treemap.depth(builder.getDepth(treemapData));
+		updateTreemap([treemapData]);
+	};
+	reader.readAsText(file);
+};
+
+function attachButtons () {
+	d3.selectAll('.nav button').on('click', function () {
+		var activateButton = function (name) {
+			d3.selectAll('.nav button').classed('active', function () {
+				return this.id == name;
+			});
 		};
-		d3.select('#metricFile').on('change', loadMetricFile);
+		activateButton(this.id);
+		treemap.metric(this.id).width(window.innerWidth - 20).height(window.innerHeight - 60);
+		if (treemapData) {
+			updateTreemap();
+		};
+	});
+};
+
+function updateTreemap(data) {
+	treemap('#chart', data);
+};
+
+d3.select('#metricFile').on('change', loadMetricFile);
+attachButtons();
 	</script>
 </body>
 </html>
