renamed to toxicity-charts and moved to root folder

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	<title>Toxicity Report</title>
+	<title>Toxicity Charts</title>
 	<link type="text/css" rel="stylesheet" href="lib/bootstrap/css/bootstrap.css" />
 	<link type="text/css" rel="stylesheet" href="main.css" />
 </head>
@@ -10,7 +10,7 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="brand" href="#">Toxicity Report</a>
+				<a class="brand" href="#">Toxicity Charts</a>
 				<ul class="nav">
 					<li class="dropdown active" id="menu-treemap">
 						<a href="#menu-treemap" class="dropdown-toggle" data-toggle="dropdown">
