--- a/index.html
+++ b/index.html
@@ -34,12 +34,28 @@
 					</li>
 				</ul>
 				<form class="navbar-form pull-right">
-						<input type="file" id="metricFile" />
+					<input type="file" id="metricFile" />
 				</form>
+				<div class="navbar-text pull-right">Load metrics:</div>
 			</div>
 		</div>
 	</div>
-	<div class="chart-container">
+	<div class="hero-unit">
+		<h1>Toxicity Charts</h1>
+		<p>How toxic is your code ?</p>
+		<ul>
+			<li>Install <a target="_blank" href="http://www.microsoft.com/en-us/download/details.aspx?id=9422">Visual Studio Code Metrics PowerTool</a></li>
+			<li>Create metrics XML file (<a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/scripts/FxCopMetrics.bat">scripts/FxCopMetrics.bat</a> can be helpful</li>
+			<li>
+				Load the generated file using this page
+				(sample can be downloaded <a target="_blank" href="https://raw.github.com/AdamNowotny/toxicity-charts/master/examples/NUnitMetrics.xml">here</a>)
+			</li>
+		</ul>
+		<p>
+			Source code at <a href="https://github.com/AdamNowotny/toxicity-charts">https://github.com/AdamNowotny/toxicity-charts</a>
+		</p>
+	</div>
+	<div class="chart-container back">
 		<div id="chart"></div>
 	</div>
 	<script type="text/javascript" src="lib/d3/d3.v2.min.js"></script>
@@ -60,11 +76,13 @@ var selection;
 function parseMetricFile(filename, content) {
 	$('#chart').html('');
 	var treemapData = fxcopParser(filename, content);
-	treemap.depth(builder.getDepth(treemapData))
+		treemap.depth(builder.getDepth(treemapData))
 		.width($('.chart-container').width())
 		.height($('.chart-container').height());
-	selection = d3.select('#chart').data([treemapData]);
-	treemap(selection);
+		selection = d3.select('#chart').data([treemapData]);
+	$('.hero-unit').slideUp('slow', function () {
+		treemap(selection);
+	});
 };
 
 function updateChart(metricName) {
