included examples for NHibernate and NServiceBus
updated main page with new samples

--- a/index.html
+++ b/index.html
@@ -46,13 +46,18 @@
 		<ul>
 			<li>Install <a target="_blank" href="http://www.microsoft.com/en-us/download/details.aspx?id=9422">Visual Studio Code Metrics PowerTool</a></li>
 			<li>Create metrics XML file (<a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/scripts/FxCopMetrics.bat">scripts/FxCopMetrics.bat</a> can be helpful</li>
-			<li>
-				Load the generated file using this page
-				(sample can be downloaded <a target="_blank" href="https://raw.github.com/AdamNowotny/toxicity-charts/master/examples/NUnitMetrics.xml">here</a>)
-			</li>
+			<li>Load the generated file using this page</li>
 		</ul>
 		<p>
 			Source code at <a href="https://github.com/AdamNowotny/toxicity-charts">https://github.com/AdamNowotny/toxicity-charts</a>
+		</p>
+		<p>
+			Sample metrics (.zip):
+			<ul>
+				<li><a href="examples/NHibernateMetrics.zip">NHibernate</a></li>
+				<li><a href="examples/NServiceBusMetrics.zip">NServiceBus</a></li>
+				<li><a href="examples/NUnitMetrics.zip">NUnit</a></li>
+			</ul>
 		</p>
 	</div>
 	<div class="chart-container back">
