--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -5,7 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="lib/jasmine-1.1.0/jasmine.css" />
 		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="main.css" />
-
+		
+		
 		<script type="text/javascript" src="lib/jasmine-1.1.0/jasmine.js"></script>
 		<script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-html.js"></script>
 		<script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-jquery.js"></script>
@@ -26,13 +27,18 @@
 				order: 'lib/require-js/order',
 				bootstrap: 'lib/bootstrap/js/bootstrap.min'
 			},
+			deps: [
+				'arrayExtensions',
+				'stringExtensions'
+			]
 		});
 		define('d3', ['lib/d3/d3.v2.min'], function () {
 			return d3;
 		});
 		require([
 			'jquery',
-			'spec/navigationSpec'
+			'spec/navigationSpec',
+			'spec/fxcopParserSpec'
 		], function ($) {
 			$.fx.off = true;
 			jasmine.getFixtures().fixturesPath = 'spec/fixtures';
