--- a/index.html
+++ b/index.html
@@ -68,8 +68,6 @@
 		<div class="chart treemap"></div>
 		<div class="chart toxicity"></div>
 	</div>
-	<script type="text/javascript" src="stringExtensions.js"></script>
-	<script type="text/javascript" src="arrayExtensions.js"></script>
 	<script type="text/javascript">
 	require.config({
 		baseUrl: '.',
@@ -78,6 +76,10 @@
 			bootstrap: 'lib/bootstrap/js/bootstrap.min',
 			amdUtils: 'lib/amd-utils'
 		},
+		deps: [
+			'arrayExtensions',
+			'stringExtensions'
+		]
 	});
 	define('d3', ['lib/d3/d3.v2.min'], function () {
 		return d3;
