smooth switching between charts and legend visible for toxicity

--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
 			</ul>
 		</p>
 	</div>
-	<div class="chart-container back">
+	<div class="chart-container">
 		<div class="chart treemap"></div>
 		<div class="chart toxicity"></div>
 	</div>
+	<div class="toxicity legend"></div>
 	<script type="text/javascript">
 	require.config({
 		baseUrl: '.',
