using NV D3 for toxicity chart

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 		paths: {
 			jquery: 'lib/jquery/jquery-1.7.2.min',
 			bootstrap: 'lib/bootstrap/js/bootstrap.min',
-			amdUtils: 'lib/amd-utils'
+			amdUtils: 'lib/amd-utils',
+			nvd3: 'lib/nvd3/nv.d3'
 		},
 		deps: [
 			'arrayExtensions',
