modified NV D3 library to not show the tooltips for toxicity chart

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			jquery: 'lib/jquery/jquery-1.7.2.min',
 			bootstrap: 'lib/bootstrap/js/bootstrap.min',
 			amdUtils: 'lib/amd-utils',
-			nvd3: 'lib/nvd3/nv.d3'
+			nvd3: 'lib/nvd3/nv.d3.modified'
 		},
 		deps: [
 			'arrayExtensions',
