fixed hero-unit to be clickable

--- a/index.html
+++ b/index.html
@@ -48,19 +48,26 @@
 		<h1>Toxicity Charts</h1>
 		<p>How toxic is your code ?</p>
 		<ul>
-			<li>Install <a target="_blank" href="http://www.microsoft.com/en-us/download/details.aspx?id=9422">Visual Studio Code Metrics PowerTool</a></li>
-			<li>Create metrics XML file (<a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/scripts/FxCopMetrics.bat">scripts/FxCopMetrics.bat</a> can be helpful)</li>
+			<li>Install <a href="http://www.microsoft.com/en-us/download/details.aspx?id=9422">
+				<i class="icon-globe"></i>Visual Studio Code Metrics PowerTool</a>
+			</li>
+			<li>Create metrics XML file (
+				<a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/scripts/FxCopMetrics.bat">
+					<i class="icon-download-alt"></i>scripts/FxCopMetrics.bat
+				</a> can be helpful)
+			</li>
 			<li>Load the generated file using this page</li>
 		</ul>
 		<p>
-			Source code at <a href="https://github.com/AdamNowotny/toxicity-charts">https://github.com/AdamNowotny/toxicity-charts</a>
+			Source code at <a href="https://github.com/AdamNowotny/toxicity-charts">
+			<i class="icon-globe"></i>https://github.com/AdamNowotny/toxicity-charts</a>
 		</p>
 		<p>
 			Sample metrics (.zip):
 			<ul>
-				<li><a href="examples/NHibernateMetrics.zip">NHibernate</a></li>
-				<li><a href="examples/NServiceBusMetrics.zip">NServiceBus</a></li>
-				<li><a href="examples/NUnitMetrics.zip">NUnit</a></li>
+				<li><a href="examples/NHibernateMetrics.zip"><i class="icon-download-alt"></i>NHibernate</a></li>
+				<li><a href="examples/NServiceBusMetrics.zip"><i class="icon-download-alt"></i>NServiceBus</a></li>
+				<li><a href="examples/NUnitMetrics.zip"><i class="icon-download-alt"></i>NUnit</a></li>
 			</ul>
 		</p>
 	</div>
