configured require-js to load Twitter bootstrap before everything else

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
 			amdUtils: 'lib/amd-utils',
 			nvd3: 'lib/nvd3/nv.d3.modified'
 		},
+		priority: [
+			'bootstrap'
+		],
 		deps: [
 			'arrayExtensions',
 			'stringExtensions'
