using Require-JS shims and CDN for jQuery and Twitter bootstrap JS

--- a/index.html
+++ b/index.html
@@ -90,23 +90,18 @@
 	require.config({
 		baseUrl: '.',
 		paths: {
-			jquery: 'lib/jquery/jquery-1.7.2.min',
-			bootstrap: 'lib/bootstrap/js/bootstrap.min',
-			amdUtils: 'lib/amd-utils',
+			jquery: [ 'http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min', 'lib/jquery/jquery-1.7.2' ],
+			bootstrap: [ 'http://current.bootstrapcdn.com/bootstrap-v204/js/bootstrap.min', 'lib/bootstrap/js/bootstrap.min' ],
+			d3: 'lib/d3/d3.v2.min',
 			nvd3: 'lib/nvd3/nv.d3.modified'
 		},
-		priority: [
-			'bootstrap'
-		],
-		deps: [
-			'arrayExtensions',
-			'stringExtensions'
-		]
+		deps: [	'arrayExtensions', 'stringExtensions' ],
+		shim: {
+			d3: { exports: 'd3'	},
+			bootstrap: [ 'jquery' ]
+		}
 	});
-	define('d3', ['lib/d3/d3.v2.min'], function () {
-		return d3;
-	})
-	require(['d3', 'mainModule'], function (d3, mainModule) {
+	require(['mainModule'], function (mainModule) {
 		mainModule();
 	});
 	</script>
