--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
 		<script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-jquery.js"></script>
 
 		<!-- Load RequireJS -->
-		<script type="text/javascript" src="lib/require-js/require.js"></script>
+		<script type="text/javascript" src="lib/require-js/require.min.js"></script>
 	</head>
 	<body>
 		<script type="text/javascript">
@@ -23,17 +23,14 @@
 				fixtures: 'spec/fixtures',
 				jquery: 'lib/jquery/jquery-1.7.2.min',
 				text: 'lib/require-js/text',
-				json: 'lib/require-js/json',
-				order: 'lib/require-js/order',
+				d3: 'lib/d3/d3.v2.min',
 				bootstrap: 'lib/bootstrap/js/bootstrap.min'
 			},
-			deps: [
-				'arrayExtensions',
-				'stringExtensions'
-			]
-		});
-		define('d3', ['lib/d3/d3.v2.min'], function () {
-			return d3;
+			deps: [	'arrayExtensions', 'stringExtensions' ],
+			shim: {
+				d3: { exports: 'd3'	},
+				bootstrap: [ 'jquery' ]
+			}
 		});
 		require([
 			'jquery',
