--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,36 +12,8 @@
 		<script type="text/javascript" src="lib/jasmine-1.1.0/jasmine-jquery.js"></script>
 
 		<!-- Load RequireJS -->
-		<script type="text/javascript" src="lib/require-js/require.min.js"></script>
+		<script type="text/javascript" data-main="testModule" src="lib/require-js/require.min.js"></script>
 	</head>
 	<body>
-		<script type="text/javascript">
-		require.config({
-			baseUrl: './',
-			paths: {
-				spec: 'spec',
-				fixtures: 'spec/fixtures',
-				jquery: 'lib/jquery/jquery-1.7.2.min',
-				text: 'lib/require-js/text',
-				d3: 'lib/d3/d3.v2.min',
-				bootstrap: 'lib/bootstrap/js/bootstrap.min'
-			},
-			deps: [	'arrayExtensions', 'stringExtensions' ],
-			shim: {
-				d3: { exports: 'd3'	},
-				bootstrap: [ 'jquery' ]
-			}
-		});
-		require([
-			'jquery',
-			'spec/navigationSpec',
-			'spec/fxcopParserSpec'
-		], function ($) {
-			$.fx.off = true;
-			jasmine.getFixtures().fixturesPath = 'spec/fixtures';
-			jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
-			jasmine.getEnv().execute();
-		});
-		</script>
 	</body>
 </html>
