removed arrayExtensions by using map and reduce from JS 1.6

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			feature: 'lib/require-js/feature',
 			implementations: 'featuresConfig'
 		},
-		deps: [	'arrayExtensions', 'stringExtensions' ],
+		deps: [	'stringExtensions' ],
 		shim: {
 			d3: { exports: 'd3'	},
 			bootstrap: [ 'jquery' ]
