examples links now point to GitHub

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 		<p>
 			Sample metrics (.zip):
 			<ul>
-				<li><a href="examples/NHibernateMetrics.zip"><i class="icon-download-alt"></i>NHibernate</a></li>
-				<li><a href="examples/NServiceBusMetrics.zip"><i class="icon-download-alt"></i>NServiceBus</a></li>
-				<li><a href="examples/NUnitMetrics.zip"><i class="icon-download-alt"></i>NUnit</a></li>
+				<li><a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/examples/NHibernateMetrics.zip"><i class="icon-download-alt"></i>NHibernate</a></li>
+				<li><a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/examples/NServiceBusMetrics.zip"><i class="icon-download-alt"></i>NServiceBus</a></li>
+				<li><a href="https://github.com/AdamNowotny/toxicity-charts/raw/master/examples/NUnitMetrics.zip"><i class="icon-download-alt"></i>NUnit</a></li>
 			</ul>
 		</p>
 	</div>
