--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<title>Toxicity Charts</title>
 	<link type="text/css" rel="stylesheet" href="lib/bootstrap/css/bootstrap.css" />
-	<link type="text/css" rel="stylesheet" href="main.css" />
-	<script type="text/javascript" data-main="mainModule" src="lib/require-js/require.min.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/main.css" />
+	<script type="text/javascript" data-main="main" src="lib/require-js/require.min.js"></script>
 	<script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-33146314-1']);
