--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Toxicity Charts</title>
 	<link type="text/css" rel="stylesheet" href="lib/bootstrap/css/bootstrap.css" />
 	<link type="text/css" rel="stylesheet" href="css/main.css" />
-	<script type="text/javascript" data-main="main" src="lib/require-js/require.min.js"></script>
+	<script type="text/javascript" data-main="src/main" src="lib/require-js/require.min.js"></script>
 	<script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-33146314-1']);
